# test_zenoh

./: Cargo.toml  Containerfile
docker/: compose copy.yml  compose.yml
docker/config/: config_cc_usv.json5  config_crypto_ms.json5  config_red_usv.json5  publisher.json5  subscriber.json5
src/: pub.rs  runner.rs  sub.rs
