[package]
name = "test_zenoh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "publisher"
path = "src/pub.rs"

[[bin]]
name = "subscriber"
path = "src/sub.rs"

[[bin]]
name = "runner"
path = "src/runner.rs"

[dependencies]
clap = { version = "^4.5", features = ["derive"] }
futures = "0.3.30"
tokio = { version = "1.40.0", features = ["signal", "macros", "rt-multi-thread", "process"]}
zenoh = { version = "1"}
log = "0.4.22"
env_logger = "0.11.5"
zenoh-ext = "1.0.1"
flume = "0.11.1"
